6.7 commit: fixed a bug that  made the testimony not to be aligned properly

--- a/style.css
+++ b/style.css
@@ -1015,7 +1015,12 @@ marquee p{
 #sect__4__wrap,
 #sect__5__wrap{
     /* this wrap everything inside of sec 3 */
- 
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 /* 
